Allow built in `InstrumenterVertxTracer` classes to be disabled
If for example users do not want HTTP instrumentation,
they can provide:
`quarkus.otel.span.enabled-tracers=eventbus,sql`

Resolves: #35376